GigHub: implemented Edit a gig; magic strings for action names replaced with expressions; fix for visibility of the text in the genres dropdown

--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -31,18 +31,23 @@ span.field-validation-error {
 .voffset {
     margin-top: 2px;
 }
+
 .voffset1 {
     margin-top: 5px;
 }
+
 .voffset2 {
     margin-top: 10px;
 }
+
 .voffset3 {
     margin-top: 20px;
 }
+
 .voffset4 {
     margin-top: 40px;
 }
+
 .voffset5 {
     margin-top: 80px;
 }
@@ -103,7 +108,7 @@ h6,
 
 .form-control {
     font-size: 17px;
-    padding: 20px 15px;
+    height: 44px;
     border-radius: 9px;
 }
 
@@ -176,3 +181,12 @@ h6,
             .gigs > li .details .genre {
                 font-size: 15px;
             }
+
+        .gigs > li .actions {
+            font-size: 15px;
+            display: none;
+        }
+
+        .gigs > li:hover .actions {
+            display: block;
+        }
